# gitlab-pulse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.agent/rules/: global.md  python.md
.agents/rules/: global.md
.github/instructions/: agent.instructions.md
.streamlit/: config.toml
app/: __init__.py
app/ai/: models.py  service.py
app/collector/: __init__.py  gql_client.py  models.py  orchestrator.py  rest_client.py  state.py
app/config/: __init__.py
app/dashboard/: __init__.py  components.py  data_loader.py  engine.py  main.py  registry.py  sidebar.py  theme.py  utils.py
app/processor/: __init__.py  enricher.py  main.py  rule_loader.py  utils.py  validator.py
app/shared/: __init__.py  schemas.py
data/analytics/: .gitkeep
docs/: index.html
docs/architecture/: ARCH_Master.md  ARCH_theme_and_colors.md  REFACTOR_theme_consolidation.md
docs/glossary/: GLOSSARY.md
docs/guidelines/: GUIDE_Developer.md  GUIDE_Operations.md
docs/spec/: TSD_DevelopmentValueStream.md  TSD_Layer1_DataAcqusitionService.md  TSD_Layer2_DomainLogicAndValidation.md  TSD_Layer3_PresentationLayer.md  TSD_Layer3_PresentationLayer_Modularization.md  TSD_Layer4_AIServices.md  TSD_ReleaseManagement.md  TSD_Testing.md  (+2 more)
scripts/: docker-entrypoint.sh  verify_dashboard.py
tests/: __init__.py  test_ai_service.py  test_dashboard_engine.py  test_local_data_tools.py  test_orchestrator.py  test_setup_config.py  test_validator.py
tools/: gitlab_seeder.py  local_data_manager.py  seeder.py  verify_duplicates.py  verify_regex_flow.py
(+53 files in other folders)
