[project]
name = "gitlab-insight"
version = "0.1.0"
description = "Analytics platform for GitLab issue data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  # Core data processing
  "pydantic>=2.0",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  # GitLab API
  "python-gitlab>=4.0",
  "httpx>=0.25",
  # Dashboard
  "streamlit>=1.30",
  "plotly>=5.18",
  "python-dotenv>=1.0",
  "streamlit-elements>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "respx>=0.20",
  "faker>=22.0",
  "numpy>=1.26",
  "mypy>=1.8",
  "ruff>=0.1",
  "pandas-stubs>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "tools"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "gitlab.*",
  "streamlit.*",
  "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
